--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-Hello World
+<html>
+
+<head>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-DFKKGDWZW4"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-DFKKGDWZW4');
+  </script>
+  <title>DustinJones.com</title>
+</head>
+
+<body>
+  <h1>Welcome!</h1>
+</body>
+
+</html>
